# lazy_transcode

./: .gitignore  2409.04470v3.txt  CLI_Feature_Parity.md  LICENSE  MANIFEST.in  PACKAGE_MIGRATION_SUMMARY.md  README.md  REFERENCES.md  SOLUTION_SUMMARY.md  TRANSCODE_ENHANCEMENTS.md  USAGE_FLOWCHART.md  pyproject.toml  qp_comparison_test.py  requirements-dev.txt  requirements.txt  setup.py  test_animation_integration.py  test_animation_tune.py  test_gradient_optimizer.py  test_logging.py  transcode_manager.py
docs/: Animation_Tune_Implementation.md  COMPREHENSIVE_REGRESSION_TESTS_SUMMARY.md  Coverage_VBR_Algorithm_Summary.md  REGRESSION_TESTING_OPPORTUNITIES.md  REGRESSION_TEST_RESULTS.md  STREAM_PRESERVATION_TESTING.md  TEST_SUITE_DOCUMENTATION_INDEX.md  TEST_VALIDATION_RESULTS.md  Universal_State_Management.md  VBR_Fix_Summary.md  VBR_Variance_Analysis_Report.md
examples/: analyze_opening_chapters.py  analyze_vbr_simple.py  compare_clip_methods.py  main_with_state_management.py  simple_state_example.py  state_management_integration.py
lazy_transcode/: __init__.py  cli.py  cli_enhanced.py  config.py
lazy_transcode/core/: __init__.py  main.py  manager.py  transcode.py  transcode_refactored.py  transcode_refactored_new.py
lazy_transcode/utils/: __init__.py  logging.py  logging_new.py  smart_logging.py
scripts/: README.md  analyze_actual_vmaf.py  qp_comparison_efficient.py  vmaf_center_crop.py
tests/: CLEANUP_COMPLETE.md  README.md  __init__.py  run_all_tests.py  run_quick_tests.py  test_overview.py  test_transcoding_engine.py  test_transcoding_engine_corrected.py  test_vbr_optimizer.py
tests/integration/: __init__.py  test_cli_feature_parity.py  test_enhanced_transcoding.py  (+2 more)
(+73 files in other folders)
